# MixAnalyzer

./: .gitignore  next.config.ts  package-lock.json  package.json
.claude/: launch.json
app/: design-tokens.css  layout.tsx  page.tsx  providers.tsx
app/dashboard/: page.tsx
app/projects/[id]/: page.tsx
backend/: Cargo.toml  analyze_audio.py  requirements.txt  separate_stems.py
backend/.sqlx/: query-0397abb1c0ec69c790d54cb04083f880d52032311811d0e52b85a1dafe1a5dd0.json  query-094880f9453cbd477cd7f2805ae3dd0bf3a08aa2844a2d59f18460c7f4913df8.json  query-0c82c398b924145b61788b2d81be1071b8aecd20abc800e70dd6654a7a802629.json  query-1fed494f91d25b7b3de9a551e61ab59079dfcbf2c364595b2d6f854fade3986b.json  query-226221e4b6f1b963a0f3edb8b3e1b5ca50e2251b48efb9d1ee27408d2e5eb5b5.json  query-30c057351ae6491fe3990dbd040580c12169e1cfd2af4293723f35799c00a012.json  query-3d3ee180840b99e8d94bd85a8a4bc96839dffefbb7b4b4a9a3426c3f77eef76f.json  query-408de42c5b24041e5621e2d3532055313e5059f01d1fad1834da6dc815181907.json  query-45bd8d8b68e2b4f709b6a4e11742d45ba2b56e7e165bf7c4a1aa3bc53c974d39.json  query-4c2fbc2969b11ca93870e48d51c2d8257cba56321be17eda155684cd447a558d.json  query-6707b5d4f33dbd09eb2e1832b2d0339ff2e4cc9aa7f66343725bf968e8e61902.json  query-6f39651b89ac06df9d4980739f1f87fd99b6f95d651aa1a931963c1bf61e0bba.json  query-7db95f1f738cae68cd25bba3b79be8e22fcc01bfb8991db08cc84d12e131648d.json  query-d66610ad4d885f2d3848405d7f44981c2f0a006af3e049ecf98d34f29a82e136.json  query-df73d399ef76e3b972a80d68c381ee5a05efcaa490da394bf4eb1553cc115080.json  query-edd5dbcd87849a9744f08be0584eb1cb8c829fc7c70e304ba793e1540db958df.json  query-ef3934d84ae32e52e797e911ec694d9fc8b82c261375092eecb72147038b01ca.json
backend/migrations/: 20241127153000_initial_schema.sql  20251204120000_add_stem_job_id.sql  20251205110000_add_app_settings.sql
backend/src/: audio_analysis.rs  main.rs  projects.rs  stem_separation.rs
features/audio-analysis/components/: AudioAnalysisUpload.tsx  FrequencyAnalyzer.tsx  LoadingAnalysis.tsx  MixComparisonReport.tsx  (+4 more)
lib/: api.ts  queries.ts
(+6 files in other folders)
