[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
reqwest = { version = "0.13", features = ["json", "native-tls", "stream"] }
base64 = "0.22"
bytes = "1"
lopdf = "0.32"
pdf-extract = "0.8"
libc = "0.2"


# SQLx + Postgres + chrono
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }

# Pour manipuler les DateTime (TIMESTAMPTZ) et les sérialiser en JSON
chrono = { version = "0.4", features = ["serde"] }

dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
tokio-stream = "0.1"
futures-util = "0.3"
futures = "0.3"

# Audio Analysis
symphonia = { version = "0.5", features = ["all"] }
spectrum-analyzer = "1.4"
async-stream = "0.3"
